<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.bankdrukapp.startSessionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutStartSession"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextName"
            style="@style/textMainStyle"
            android:layout_marginTop="125dp"
            android:height="50dp"
            android:hint="@string/editTextName"
            android:minHeight="48dp"
            android:textColor="@color/teal_200"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextExercise"
            style="@style/textMainStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/editTextExercise"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/teal_200"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" />

        <Button
            android:id="@+id/buttonStartSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/darkGreen"
            android:fontFamily="@font/audiowide"
            android:text="@string/buttonStartSession"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextExercise" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="262dp"
            android:layout_height="187dp"
            android:layout_marginTop="25dp"
            android:rotationX="20"
            android:src="@drawable/logo1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonStartSession" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>